# fastapi-csv-upload

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  Taskfile.yml  alembic.ini  assignments.md  log_config.py  log_telemetry_stats.py  logger.py  logging.json  pyproject.toml  pytest.ini
.github/workflows/: main.yml
alembic/: env.py
alembic/versions/: 2025_11_14_0224-536effe187e8.py  2025_11_19_1518-62c04edb1400.py  2025_11_19_1750-9d85d356a614.py  73d2e0f178ae_auto.py  bd09512f9f99_initial_migration.py
app/: config.py  constants.py  crud.py  database.py  dependencies.py  log_config.py  main.py  models.py  schemas.py
app/routers/: analysis.py  csv_file.py
app/utils/: analysis.py  csv_files.py  detectors.py
tests/: conftest.py  sample.csv  test_app.py
tests/routers/: test_analysis.py
tests/utils/: test_analysis.py  test_csv_files.py  test_detectors.py
