[project]
name = "fastapi-csv-upload"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "pandas>=2.2.3",
    "pydantic-settings>=2.8.1",
    "pytest-asyncio>=0.26.0",
    "sqlmodel>=0.0.24",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pytest>=8.3.5",
]
